Added the comments

--- a/test_small_ai_model.ipynb
+++ b/test_small_ai_model.ipynb
@@ -23,33 +23,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "47d0eba2-ba4d-4588-9054-89b49e332a96",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input Data Matrix (N x T):\n",
+      "          0         1         2         3         4\n",
+      "0  1.764052  0.400157  0.978738  2.240893  1.867558\n",
+      "1 -0.977278  0.950088 -0.151357 -0.103219  0.410599\n",
+      "2  0.144044  1.454274  0.761038  0.121675  0.443863\n",
+      "3  0.333674  1.494079 -0.205158  0.313068 -0.854096\n",
+      "4 -2.552990  0.653619  0.864436 -0.742165  2.269755\n",
+      "Shape: (5, 5)\n",
+      "\n",
+      "Correlation Matrix (N x N):\n",
+      "          0         1         2         3         4\n",
+      "0  1.250000 -0.668397 -1.185826 -0.717164 -0.352215\n",
+      "1 -0.668397  1.250000  0.964521  0.360360  0.949840\n",
+      "2 -1.185826  0.964521  1.250000  0.716618  0.580204\n",
+      "3 -0.717164  0.360360  0.716618  1.250000 -0.461916\n",
+      "4 -0.352215  0.949840  0.580204 -0.461916  1.250000\n",
+      "Shape: (5, 5)\n",
+      "\n",
+      "Runtime (single-thread CPU): 0.000475 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "# Generate Dataset\n",
     "N = 5   # number of time series\n",
-    "T = 5   # length of each time series\n",
+    "T = 5   # number of time steps per time series\n",
     "\n",
-    "np.random.seed(0)\n",
-    "X = np.random.randn(N, T)   # shape (N, T)\n",
+    "np.random.seed(0) ## Ensures same random numbers every time you run it\n",
+    "X = np.random.randn(N, T)   # shape of matrix X is (N, T), generates random numbers from normal distribution (mean=0, std=1) \n",
     "\n",
     "print(\"Input Data Matrix (N x T):\")\n",
-    "print(pd.DataFrame(X))\n",
+    "print(pd.DataFrame(X)) ## Converts NumPy array into table format, Amitava prefer's to read a dataset in tabular pandas form.\n",
     "print(\"Shape:\", X.shape)\n",
+    "\n",
+    "start = time.time() ## Records start time, calculates the run time of the following code snippet till end = time.time()\n",
     "\n",
     "# Single-thread CPU Baseline\n",
     "# Correlation Matrix\n",
-    "\n",
-    "start = time.time()\n",
-    "# Normalize each time series\n",
-    "means = X.mean(axis=1, keepdims=True)\n",
-    "stds = X.std(axis=1, keepdims=True)\n",
-    "Z = (X - means) / stds\n",
-    "\n",
-    "# Correlation = (Z @ Z^T) / (T - 1)\n",
-    "C = (Z @ Z.T) / (T - 1) ## @ : matrix multiplication\n",
+    "# Normalise each time series\n",
+    "means = X.mean(axis=1, keepdims=True) ## .mean() → computes average, axis=1 → row-wise (each time series), keepdims=True → keeps shape as (N,1) instead of flattening\n",
+    "stds = X.std(axis=1, keepdims=True) ## .std() → standard deviation, axis=1 → row-wise (each time series), Measures spread of each time series\n",
+    "Z = (X - means) / stds ## Z = (X - means) / stds, This is standardization (z-score)\n",
+    "C = (Z @ Z.T) / (T - 1) ## @ : matrix multiplication {equivalent to np.matmul()} # Correlation = (Z @ Z^T) / (T - 1) #### Z.T => \".T\" = transpose ## Converts (N × T) → (T × N) \n",
+    "### Z @ Z.T => (N×T)⋅(T×N) => (N×N)\n",
+    "### Correlation = (Z @ Z.T) / (T - 1)\n",
+    "### Here, each element C[i, j] = (1 / (T - 1)) * sum_{k=1}^{T} (Z[i, k] * Z[j, k])\n",
+    "### This computes the sample correlation between time series i and j.\n",
     "\n",
     "end = time.time()\n",
     "\n",
@@ -61,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "d7009c31-c957-4073-88d6-b64fffb4fd09",
    "metadata": {},
    "outputs": [
@@ -92,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "5957e327-8ff0-40f7-bd11-16ae76374fc4",
    "metadata": {},
    "outputs": [
@@ -119,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "c76066f2-e9cb-4c1a-ac13-b36764b1ae9d",
    "metadata": {},
    "outputs": [
