removed interpolation while plotting, not needed for discrete datasets

--- a/test_small_ai_model.ipynb
+++ b/test_small_ai_model.ipynb
@@ -49,7 +49,7 @@
       "4 -0.352215  0.949840  0.580204 -0.461916  1.250000\n",
       "Shape: (5, 5)\n",
       "\n",
-      "Runtime (single-thread CPU): 0.000475 seconds\n"
+      "Runtime (single-thread CPU): 0.000166 seconds\n"
      ]
     }
    ],
@@ -107,7 +107,7 @@
    "source": [
     "# Visualize Correlation Matrix\n",
     "plt.figure(figsize=(6, 5))\n",
-    "plt.imshow(C, interpolation='nearest')\n",
+    "plt.imshow(C) ## , interpolation='nearest', interpolation may be needed in some datasets\n",
     "plt.colorbar(label=\"Correlation Coefficient\")\n",
     "plt.title(\"Correlation Matrix Heatmap\")\n",
     "plt.xlabel(\"Time Series Index\")\n",
@@ -177,14 +177,6 @@
     "plt.tight_layout()\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e2a5f7e-945c-446a-b297-acf1ca6f8ab5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
